// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tid.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 47,
                "name": "tid00",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 47,
                        "sval": {
                          "sval": "(0,0)",
                        },
                      },
                    },
                    "location": 54,
                    "typeName": {
                      "location": 56,
                      "names": [
                        {
                          "String": {
                            "sval": "tid",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 72,
                "name": "tid01",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 72,
                        "sval": {
                          "sval": "(0,1)",
                        },
                      },
                    },
                    "location": 79,
                    "typeName": {
                      "location": 81,
                      "names": [
                        {
                          "String": {
                            "sval": "tid",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 97,
                "name": "tidm10",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 97,
                        "sval": {
                          "sval": "(-1,0)",
                        },
                      },
                    },
                    "location": 105,
                    "typeName": {
                      "location": 107,
                      "names": [
                        {
                          "String": {
                            "sval": "tid",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 124,
                "name": "tidmax",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 124,
                        "sval": {
                          "sval": "(4294967295,65535)",
                        },
                      },
                    },
                    "location": 144,
                    "typeName": {
                      "location": 146,
                      "names": [
                        {
                          "String": {
                            "sval": "tid",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 9,
                        "sval": {
                          "sval": "(4294967296,1)",
                        },
                      },
                    },
                    "location": 25,
                    "typeName": {
                      "location": 27,
                      "names": [
                        {
                          "String": {
                            "sval": "tid",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 18,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 18,
                        "sval": {
                          "sval": "(1,65536)",
                        },
                      },
                    },
                    "location": 29,
                    "typeName": {
                      "location": 31,
                      "names": [
                        {
                          "String": {
                            "sval": "tid",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 62,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 80,
                          "sval": {
                            "sval": "(0)",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 87,
                          "sval": {
                            "sval": "tid",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 62,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "(0)",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 42,
                                  "sval": {
                                    "sval": "tid",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "(0,-1)",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "tid",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "(0,-1)",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 45,
                                  "sval": {
                                    "sval": "tid",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 64,
            "relname": "tid_tab",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 73,
                "typeName": {
                  "location": 75,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 42,
            "relname": "tid_tab",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 58,
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 63,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 23,
                "relname": "tid_tab",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 12,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "min",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 23,
                "relname": "tid_tab",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 12,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "max",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 10,
                "relname": "tid_tab",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 101,
              "relname": "tid_matview",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_MATVIEW",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 130,
                    "relname": "tid_tab",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 123,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 123,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_matview",
                              },
                            },
                          },
                          "location": 30,
                          "typeName": {
                            "location": 32,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 38,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 45,
                          "typeName": {
                            "location": 47,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 33 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 22,
            "relname": "tid_tab",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 38,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RefreshMatViewStmt": {
          "relation": {
            "inh": true,
            "location": 27,
            "relname": "tid_matview",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_matview",
                              },
                            },
                          },
                          "location": 30,
                          "typeName": {
                            "location": 32,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 38,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 45,
                          "typeName": {
                            "location": 47,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 36 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "tid_matview",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_MATVIEW",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 10,
                "relname": "tid_tab",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateSeqStmt": {
          "sequence": {
            "inh": true,
            "location": 30,
            "relname": "tid_seq",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_seq",
                              },
                            },
                          },
                          "location": 26,
                          "typeName": {
                            "location": 28,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 34,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 41,
                          "typeName": {
                            "location": 43,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 42 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "tid_seq",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_SEQUENCE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "tid_ind",
          "indexParams": [
            {
              "IndexElem": {
                "name": "a",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 71,
            "relname": "tid_tab",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 47 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_ind",
                              },
                            },
                          },
                          "location": 26,
                          "typeName": {
                            "location": 28,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 34,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 41,
                          "typeName": {
                            "location": 43,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 47 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "tid_ind",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_INDEX",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "partspec": {
            "location": 65,
            "partParams": [
              {
                "PartitionElem": {
                  "location": 85,
                  "name": "a",
                },
              },
            ],
            "strategy": "PARTITION_STRATEGY_RANGE",
          },
          "relation": {
            "inh": true,
            "location": 48,
            "relname": "tid_part",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 58,
                "typeName": {
                  "location": 60,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_part",
                              },
                            },
                          },
                          "location": 27,
                          "typeName": {
                            "location": 29,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 35,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 42,
                          "typeName": {
                            "location": 44,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 52 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "tid_part",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 89,
                    "relname": "tid_tab",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 82,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 82,
                      },
                    },
                  },
                },
              ],
            },
          },
          "view": {
            "inh": true,
            "location": 55,
            "relname": "tid_view_no_ctid",
            "relpersistence": "p",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 58 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_view_no_ctid",
                              },
                            },
                          },
                          "location": 35,
                          "typeName": {
                            "location": 37,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 43,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 50,
                          "typeName": {
                            "location": 52,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 58 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "tid_view_no_ctid",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_VIEW",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 60 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 103,
                    "relname": "tid_tab",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 90,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 90,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 96,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 96,
                      },
                    },
                  },
                },
              ],
            },
          },
          "view": {
            "inh": true,
            "location": 61,
            "relname": "tid_view_with_ctid",
            "relpersistence": "p",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_view_with_ctid",
                              },
                            },
                          },
                          "location": 37,
                          "typeName": {
                            "location": 39,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 45,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 52,
                          "typeName": {
                            "location": 54,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 62 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 22,
            "relname": "tid_tab",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 38,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_view_with_ctid",
                              },
                            },
                          },
                          "location": 37,
                          "typeName": {
                            "location": 39,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 45,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 52,
                          "typeName": {
                            "location": 54,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 64 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "tid_view_with_ctid",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_VIEW",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 10,
                "relname": "tid_tab",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 67 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 85,
                    "name": "ctid",
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 85,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 96,
                    "name": "a",
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 96,
                      },
                    },
                  },
                },
              ],
            },
          },
          "view": {
            "inh": true,
            "location": 56,
            "relname": "tid_view_fake_ctid",
            "relpersistence": "p",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 17,
                              "sval": {
                                "sval": "tid_view_fake_ctid",
                              },
                            },
                          },
                          "location": 37,
                          "typeName": {
                            "location": 39,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 45,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 52,
                          "typeName": {
                            "location": 54,
                            "names": [
                              {
                                "String": {
                                  "sval": "tid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "currtid2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 69 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "tid_view_fake_ctid",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_VIEW",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`tid.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_CASCADE",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "tid_tab",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
